--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "grunt-contrib-compress": "^1.4.3",
         "grunt-contrib-copy": "^1.0.0",
         "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-uglify": "^3.4.0",
         "grunt-eslint": "^21.0.0",
         "grunt-http-server": "^2.1.0",
         "grunt-jsdoc": "^2.2.1",
