--- a/js/build.xml
+++ b/js/build.xml
@@ -302,10 +302,15 @@ limitations under the License.
             <arg value="-o"/>
             <arg value="${build.output.dyncode}/ilib.js"/>
             <arg value="--no-mangle-functions"/>
+            <arg value="--keep-fnames"/>
             <arg value="-c"/>
             <arg value="-v"/>
+            <arg value="--name-cache"/>
+            <arg value="names.json"/>
             <arg value="--source-map"/>
-            <arg value="includeSources"/>
+        	<arg value="base='${build.output.dyncode}'"/>
+            <arg value="--source-map"/>
+            <arg value="url='ilib.js'"/>
         </exec>
         <exec osfamily="windows" executable="uglifyjs" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -315,10 +320,15 @@ limitations under the License.
             <arg value="-o"/>
             <arg value="${build.output.dyncode}/ilib.js"/>
             <arg value="--no-mangle-functions"/>
+            <arg value="--keep-fnames"/>
             <arg value="-c"/>
             <arg value="-v"/>
+            <arg value="--name-cache"/>
+            <arg value="names.json"/>
             <arg value="--source-map"/>
-            <arg value="includeSources"/>
+            <arg value="base='${build.output.dyncode}'"/>
+            <arg value="--source-map"/>
+            <arg value="url='ilib.js'"/>
         </exec>
 		<exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -341,10 +351,15 @@ limitations under the License.
             <arg value="-o"/>
             <targetfile/>
             <arg value="--no-mangle-functions"/>
+            <arg value="--keep-fnames"/>
             <arg value="-c"/>
             <arg value="-v"/>
+            <arg value="--name-cache"/>
+            <arg value="names.json"/>
             <arg value="--source-map"/>
-            <arg value="includeSources"/>
+            <arg value="base='${build.output.dyncode}'"/>
+            <arg value="--source-map"/>
+            <arg value="url='${srcfile}'"/>
             <fileset dir="${build.lib}">
                 <include name="*.js"/>
                 <exclude name="ilib.js"/>
@@ -371,10 +386,15 @@ limitations under the License.
             <arg value="-o"/>
             <targetfile/>
             <arg value="--no-mangle-functions"/>
+            <arg value="--keep-fnames"/>
             <arg value="-c"/>
             <arg value="-v"/>
+            <arg value="--name-cache"/>
+            <arg value="names.json"/>
             <arg value="--source-map"/>
-            <arg value="includeSources"/>
+            <arg value="base='${build.output.dyncode}'"/>
+            <arg value="--source-map"/>
+            <arg value="url='${srcfile}'"/>
             <fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
             <fileset dir="${build.lib}" includes="ilib-node*.js,ilib-webpack.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
             <mapper type="glob" from="*.js" to="*.js"/>
