--- a/js/build.xml
+++ b/js/build.xml
@@ -310,7 +310,7 @@ limitations under the License.
             <arg value="--source-map"/>
         	<arg value="base='${build.output.dyncode}'"/>
             <arg value="--source-map"/>
-            <arg value="url='ilib.js'"/>
+            <arg value="filename='ilib.js'"/>
         </exec>
         <exec osfamily="windows" executable="uglifyjs" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -328,7 +328,7 @@ limitations under the License.
             <arg value="--source-map"/>
             <arg value="base='${build.output.dyncode}'"/>
             <arg value="--source-map"/>
-            <arg value="url='ilib.js'"/>
+            <arg value="filename='ilib.js'"/>
         </exec>
 		<exec osfamily="unix" executable="node" dir="${build.base}" failifexecutionfails="true">
             <env key="PATH" path="${env.PATH}:${nm.bin}"/>
@@ -344,11 +344,11 @@ limitations under the License.
 		</exec>
 
 		<!-- then do all the rest of them -->
-		<apply osfamily="unix" executable="uglifyjs" dest="${build.output.dyncode}" parallel="false">
+		<mkdir dir="${build.output}/src"/>
+		<apply osfamily="unix" executable="uglifyjs2" dir="${build.lib}" dest="${build.output.dyncode}" parallel="false" relative="yes">
 			<srcfile/>
 			<arg value="--comments"/>
 			<arg value="${keep.these.comments}"/>
-            <arg value="-o"/>
             <targetfile/>
             <arg value="--no-mangle-functions"/>
             <arg value="--keep-fnames"/>
@@ -356,11 +356,17 @@ limitations under the License.
             <arg value="-v"/>
             <arg value="--name-cache"/>
             <arg value="names.json"/>
-            <arg value="--source-map"/>
-            <arg value="base='${build.output.dyncode}'"/>
-            <arg value="--source-map"/>
-            <arg value="url='${srcfile}'"/>
-            <fileset dir="${build.lib}">
+			
+			<compositemapper>
+	            <mergemapper to="-o"/>
+				<globmapper from="*.js" to="*.js"/>
+                <mergemapper to="--source-map"/>
+                <globmapper from="*.js" to="../src/*.js.map"/>
+                <mergemapper to="--source-map-root"/>
+                <globmapper from="*.js" to="*.js"/>
+			</compositemapper>
+
+			<fileset dir="${build.lib}">
                 <include name="*.js"/>
                 <exclude name="ilib.js"/>
                 <exclude name="ilib-*.js"/>
@@ -377,7 +383,6 @@ limitations under the License.
             <fileset dir="${build.base}">
                 <include name="index.js"/>
             </fileset>
-            <mapper type="glob" from="*.js" to="*.js"/>
         </apply>
         <apply osfamily="windows" executable="uglifyjs.bat" dest="${build.output.dyncode}" parallel="false">
             <srcfile/>
@@ -394,7 +399,8 @@ limitations under the License.
             <arg value="--source-map"/>
             <arg value="base='${build.output.dyncode}'"/>
             <arg value="--source-map"/>
-            <arg value="url='${srcfile}'"/>
+            <arg value="filename="/>
+            <srcfile/>
             <fileset dir="${build.lib}" includes="*.js"  excludes="ilib.js,ilib-*.js,runner.js,externs.js,datefmtstr.js"/>
             <fileset dir="${build.lib}" includes="ilib-node*.js,ilib-webpack.js,ilib-stubs*,ilib-web.js,ilib-qt.js"/>
             <mapper type="glob" from="*.js" to="*.js"/>
