--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
         "source-map-loader": "^0.2.4",
         "tap": "^10.0.2",
         "trireme": "^0.9.3",
-        "uglify-js": "^3.6.1",
+        "uglify-js2": "^2.1.11",
         "uglifyjs-webpack-plugin": "^1.3.0",
         "webpack": "^4.32.2",
         "webpack-cli": "^3.3.2",
