--- a/js/package.json.template
+++ b/js/package.json.template
@@ -50,16 +50,14 @@
         "type": "git",
         "url": "git@github.com:iLib-js/iLib.git"
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "git@github.com:iLib-js/iLib.git"
-        }
-    ],
     "scripts": {
        "test": "ant test"
     },
     "devDependencies": {
-      "http-server": "^0.9.0"
+        "grunt-contrib-copy": "^1.0.0",
+        "grunt-contrib-uglify": "^4.0.1",
+        "grunt-mkdir": "^1.0.0",
+        "grunt-text-replace": "^0.4.0",
+        "http-server": "^0.9.0"
     }
 }
