--- a/js/build.xml
+++ b/js/build.xml
@@ -40,6 +40,7 @@ limitations under the License.
 	<property name="build.output.js"				value="${build.output}/js"/>
 	<property name="build.output.dyncode"			value="${build.output}/dyncode"/>
 	<property name="build.output.test"				value="${build.output}/test"/>
+	<property name="build.output.package"           value="${build.output}/package"/>
 	<property name="build.jsdoc"					value="${build.output}/jsdoc"/>
 	<property name="build.data"						value="${build.base}/data"/>
 	<property name="build.test"						value="${build.base}/test"/>
@@ -116,7 +117,7 @@ limitations under the License.
 	<target name="prepare" depends="update.package.json" description="Prepare all directories that are needed before the project can be built">
 		<mkdir dir="${build.output.js}"/>
 		<mkdir dir="${build.output.dyncode}"/>
-		<mkdir dir="${build.output}/package/lib"/>
+		<mkdir dir="${build.output.package}/lib"/>
 		<mkdir dir="${build.output.test}"/>
 	</target>
 	<!-- =================================================================== -->
@@ -296,7 +297,7 @@ limitations under the License.
             <arg value="uglifypkg"/>
         </exec>
 
-		<copy todir="${build.output}/package">
+		<copy todir="${build.output.package}">
 			<dirset dir="${build.output.dyncode}" includes="**"/>
 			<fileset dir="${build.output.dyncode}">
                 <include name="**/*.map"/>
@@ -305,7 +306,7 @@ limitations under the License.
             </fileset>
 		</copy>
 
-		<apply osfamily="unix" executable="node" dest="${build.output}/package" parallel="false" force="true">
+		<apply osfamily="unix" executable="node" dest="${build.output.package}" parallel="false" force="true">
 			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
 			<srcfile/>
 			<targetfile/>
@@ -316,7 +317,7 @@ limitations under the License.
 			</fileset>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
-		<apply osfamily="windows" executable="node.exe" dest="${build.output}/package" parallel="false" force="true">
+		<apply osfamily="windows" executable="node.exe" dest="${build.output.package}" parallel="false" force="true">
 			<arg value="${build.tools.qmlizer}/qmlizer.js"/>
 			<srcfile/>
 			<targetfile/>
@@ -356,7 +357,7 @@ limitations under the License.
 		</copy>
 		<mkdir dir="${build.export}/js/dyncode"/>
 		<copy todir="${build.export}/js/dyncode">
-			<fileset dir="${build.output.dyncode}">
+			<fileset dir="${build.output.package}">
 				<include name="**/*.js"/>
 				<include name="**/*.js.map"/>
 			</fileset>
@@ -391,31 +392,14 @@ limitations under the License.
 			</fileset>
 		</copy>
 		<mkdir dir="${build.export}/package/lib"/>
-		<copy todir="${build.export}/package/lib">
+		<copy todir="${build.export}/package">
 			<fileset dir="${build.export}/js/dyncode">
 				<include name="**/*"/>
-				<exclude name="*Loader.js"/>
-				<exclude name="ilib-web.js"/>
-				<exclude name="ilib-qt.js"/>
-				<exclude name="ilib-rhino.js"/>
-				<exclude name="ilib-enyo.js"/>
-				<exclude name="index.js"/>
-            </fileset>
-            <fileset dir="${build.export}/js/dyncode">
-                <include name="Loader.js"/>
-                <include name="RhinoLoader.js"/>
-                <include name="WebpackLoader.js"/>
-                <include name="NodeLoader.js"/>
             </fileset>
 			<fileset dir="${build.export}/js/assembled">
 				<include name="ilib-full-dyn.js"/>
 				<include name="ilib-full-dyn-compiled.js"/>
 			</fileset>
-		</copy>
-		<copy todir="${build.export}/package">
-            <fileset dir="${build.export}/js/dyncode">
-                <include name="index.js*"/>
-            </fileset>
 		</copy>
 		<copy todir="${build.export}/package/locale">
 			<fileset dir="${build.locale}">
