Support "switchmode" script
This switches the npm package to prod or dev mode
but renaming directories. That way, client code does
not need to be changed.

--- a/js/build.xml
+++ b/js/build.xml
@@ -365,7 +365,7 @@ limitations under the License.
             </fileset>
             <fileset dir="${build.base}">
                 <include name="index.js"/>
-                <include name="env.js"/>
+                <include name="switchmode.js"/>
             </fileset>
 			<mapper type="glob" from="*.js" to="*.js"/>
 		</apply>
@@ -452,7 +452,6 @@ limitations under the License.
 			<fileset dir="${build.base}">
 				<include name="lib/**"/>
 				<include name="index.js"/>
-                <include name="env.js"/>
 				<include name="build.xml"/>
 				<include name="build.properties"/>
 				<include name="data/locale/**/*.json"/>
@@ -482,7 +481,6 @@ limitations under the License.
 				<exclude name="ilib-rhino.js"/>
 				<exclude name="ilib-enyo.js"/>
 				<exclude name="index.js"/>
-                <include name="env.js"/>
             </fileset>
             <fileset dir="${build.export}/js/dyncode">
                 <include name="Loader.js"/>
@@ -498,7 +496,7 @@ limitations under the License.
 		<copy todir="${build.export}/package">
             <fileset dir="${build.export}/js/dyncode">
                 <include name="index.js"/>
-                <include name="env.js"/>
+                <include name="switchmode.js"/>
             </fileset>
 		</copy>
         <mkdir dir="${build.export}/package/src" description="Dir to contain all the exported source files"/>
@@ -520,7 +518,7 @@ limitations under the License.
                 <include name="NodeLoader.js"/>
             </fileset>
         </copy>
-		<copy todir="${build.export}/package/locale">
+        <copy todir="${build.export}/package/locale">
 			<fileset dir="${build.locale}">
 				<include name="**/*.json"/>
 			</fileset>
