--- a/js/build.xml
+++ b/js/build.xml
@@ -32,7 +32,7 @@ limitations under the License.
 	<property name="build.export"					value="${build.base}/../export"/>
 	<property name="build.docs"                     value="${build.base}/../docs"/>
 	<property name="build.demo"						value="${build.docs}/demo"/>
-	<property name="build.apidocs"                  value="${build.docs}/api"/>
+	<property name="build.apidocs"                  value="${build.docs}/api/jsdoc"/>
 	<property name="build.tools"					value="${build.base}/../tools"/>
 	<property name="build.tools.qmlizer"			value="${build.base}/../tools/qmlizer"/>
 	<property name="build.tools.build"				value="${build.base}/../tools/build"/>
