--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
         "should": "^13.2.3",
         "tap": "^10.0.2",
         "trireme": "^0.9.3",
+        "ucd-full": "^13.0.0",
         "uglify-js": "^3.4.9",
         "uglifyjs-webpack-plugin": "^1.3.0",
         "webpack": "^4.32.2",
