--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 jobs:
-  test6:
+  test:
     docker:
-      - image: circleci/node:6-browsers
+      - image: cimg/openjdk:1.8-node
     steps:
       - checkout
       - run:
@@ -11,137 +11,9 @@ jobs:
             ls -la
             rm -rf node_modules package-lock.json
             npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
       - run:
           name: Running all unit tests
           command: |
-            node -v
-            npm -v
-            npm run test
-  test8:
-    docker:
-      - image: circleci/node:8-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-  test10:
-    docker:
-      - image: circleci/node:10-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-  test12:
-    docker:
-      - image: circleci/node:12-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-  test13:
-    docker:
-      - image: circleci/node:13-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-  test14:
-    docker:
-      - image: circleci/node:14-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-  testCurrent:
-    docker:
-      - image: circleci/node:current-browsers
-    steps:
-      - checkout
-      - run:
-          name: Setup
-          command: |
-            ls -la
-            rm -rf node_modules package-lock.json
-            npm install
-            NODE=$(dirname $(dirname $(which node)))
-            sed "s@XXXX@$NODE@" build.properties.travis > build.properties
-      - run:
-          name: Running all unit tests
-          command: |
-            node -v
-            npm -v
-            npm run test
-
-workflows:
-  version: 2
-  test-all-node-versions:
-    jobs:
-      - test6
-      - test8
-      - test10
-      - test12
-      - test13
-      - test14
-      - testCurrent
+            echo "node version: " $(node -v)
+            echo "npm version: " $(npm -v)
+            ant test
